--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
-            <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.png" />
-            <img id="image2" src="./test-image.png" />
+            <img id="floar" src="./floor-image.png" />
+            <img id="wall" src="./wall-image.png" />
             <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
         </a-assets>
 
+        <!-- 床 -->
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
         <a-entity mindar-image-target="targetIndex: 0">
-          <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+            <a-plane src="#floor" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
         </a-entity>
 
+        <!-- 壁 -->
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-plane color="red" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+            <a-plane src="#wall" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
           </a-entity>
     </a-scene>
   </body>
