--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>おきなわ(更新)</title>
+    <title>おきなわ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
@@ -21,7 +21,7 @@
 
         <!-- 壁 -->
         <a-entity mindar-image-target="targetIndex: 1">
-            <a-plane src="#wall" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
+            <a-plane src="#wall" position="0 -3 0" height="1" width="1" rotation="0 0 0"></a-plane>
           </a-entity>
     </a-scene>
   </body>
